Did some changes in sign up(registration)

--- a/handleBlog/templates/register.html
+++ b/handleBlog/templates/register.html
@@ -26,10 +26,10 @@
         background: #6a11cb;
         
         /* Chrome 10-25, Safari 5.1-6 */
-        background: -webkit-linear-gradient(to right, rgb(203, 95, 17), rgb(252, 76, 37));
+        background: -webkit-linear-gradient(to right, #ee0979, #ff6a00);
         
         /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        background: linear-gradient(to right, rgb(203, 95, 17), rgb(252, 76, 37))
+        background: linear-gradient(to right, #ee0979, #ff6a00)
         }
 </style>
 <body>
@@ -50,33 +50,41 @@
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                           <div class="form-floating flex-fill mb-0">
-                            <input name='name' type="text" id="form3Example1c" class="form-control" />
-                            <label class="form-label" for="form3Example1c">Your Name</label>
+                            <input name='userName' type="text" id="form3Example1c" class="form-control" />
+                            <label class="form-label" for="form3Example1c">User Name</label>
                           </div>
                         </div>
       
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                           <div class="form-floating flex-fill mb-0">
-                            <input name='email' type="email" id="form3Example3c" class="form-control" />
-                            <label class="form-label" for="form3Example3c">Your Email</label>
+                            <input name='userEmail' type="email" id="form3Example3c" class="form-control" />
+                            <label class="form-label" for="form3Example3c">Email</label>
                           </div>
                         </div>
       
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                           <div class="form-floating flex-fill mb-0">
-                            <input name='password' type="password" id="form3Example4c" class="form-control" />
+                            <input name='userPassword' type="password" id="form3Example4c" class="form-control" />
                             <label class="form-label" for="form3Example4c">Password</label>
                           </div>
                         </div>
 
                         <div class="d-flex flex-row align-items-center mb-4">
-                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                            <i class="fa-solid fa-phone fa-lg me-3 fa-fw"></i>
                             <div class="form-floating flex-fill mb-0">
-                              <input name='email' type="email" id="form3Example3c" class="form-control" />
-                              <label class="form-label" for="form3Example3c">Your Phone Number</label>
+                              <input name='userPhone' id="phone" type="tel" class="form-control" />
+                              <label class="form-label" for="form3Example3c">Phone Number</label>
                             </div>
+                          </div>
+
+                          <div class="d-flex flex-row align-items-center mb-4">
+                            <i class="fa-solid fa-address-card fa-lg me-3 fa-fw"></i>
+                            <div class="form-floating flex-fill mb-0">
+                              <input name='userAbout' type="text" id="form3Example3c" class="form-control" />
+                              <label class="form-label" for="form3Example3c">About You</label>
+                            </div>  
                           </div>
       
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
@@ -88,7 +96,7 @@
                     </div>
                     <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
       
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                      <img src="https://assets-global.website-files.com/621d41df6da9f0dcc7cb5eeb/62c4a27a4208d1536a2f4379_pablo-book-lover.png"
                         class="img-fluid" alt="Sample image">
       
                     </div>
