--- a/handleBlog/templates/register.html
+++ b/handleBlog/templates/register.html
@@ -89,8 +89,8 @@
       
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                           <button type="submit" class="btn btn-primary btn-lg gradient-custom">Register</button>
+                          <button class="btn btn-primary btn-lg gradient-custom mx-4" href="{% url 'login' %}">Login</button>
                         </div>
-      
                       </form>
       
                     </div>
