Added featurs: blog, content, author and its ui

--- a/handleBlog/templates/resetPasswordComplete.html
+++ b/handleBlog/templates/resetPasswordComplete.html
@@ -34,22 +34,17 @@
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-12 col-md-8 col-lg-6 col-xl-5">
               <div class="card-body p-5 text-center">   
-                <form action="" class='row d-flex justify-content-center align-items-center' method="post">
+                <form class='row d-flex justify-content-center align-items-center'>
+                    {% csrf_token %}            
                     <div class="card text-center" style="width: 300px;">
                         <div class="card-header h5 text-white gradient-custom">Password Reset</div>
-                        <div class="card-body px-5">
+                        <div class="card-body px-5" style="color: green;"> 
                             <p class="card-text py-2">
-                                Enter your email address and we'll send you an email with instructions to reset your password.
+                                Your Password has been reset, Thank you.
                             </p>
-                            <div class="form-floating">
-                                <input type="email" id="typeEmail" class="form-control my-3" />
-                                <label class="form-label" for="typeEmail">Email input</label>
-                            </div>
-                            <a href="#" class="btn btn-primary w-100 gradient-custom">Reset password</a>
-                            <div class="d-flex justify-content-between mt-4">
-                                <a href="{% url 'login' %}">Login</a>
-                                <a href="register">Register</a>
-                            </div>
+                            <p>
+                                <span style="color:blue">You may go ahead <button class=" text-white  gradient-custom" href="{% url 'login' %}">Log-in</button></span>
+                            </p>
                         </div>
                     </div>  
                 </form>
