--- a/handleBlog/templates/home.html
+++ b/handleBlog/templates/home.html
@@ -13,12 +13,37 @@
 </head>
 <style>
     .gradient-custom {
-        background: #6a11cb;
-        background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-        background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+      background: #6a11cb;
+      background: -webkit-linear-gradient(to right, #cb356b, #bd3f32);
+      background: linear-gradient(to right, #cb356b, #bd3f32)
     }
 </style>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#" > Just Blog it</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'blog' %}">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'content' %}">Your Content</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'author' %}">Author</a>
+            </li>
+          </ul>
+          <!-- <span class="navbar-text">
+            you can pour your thoughts here
+          </span> -->
+        </div>
+      </nav>
 
     <section class="vh-100 gradient-custom">
         <div class="container py-5 h-100">
