--- a/handleBlog/templates/content.html
+++ b/handleBlog/templates/content.html
@@ -97,7 +97,7 @@
                 
                 <div class="card">
                     <h5 class="text-center mb-4 gradient-custom text-white" style="border-radius: .5rem;">Enter Blog details</h5>
-                    <form class="form-card" action="{% url 'content' %}" method="post">
+                    <form class="form-card" action="{% url 'content' %}" method="post" enctype="multipart/form-data">
                         {% csrf_token%}
                         <!-- <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">First name<span class="text-danger"> *</span></label> <input type="text" id="fname" name="fname" placeholder="Enter your first name" onblur="validate(1)"> </div>
