--- a/handleBlog/templates/author.html
+++ b/handleBlog/templates/author.html
@@ -17,26 +17,34 @@
         background: -webkit-linear-gradient(to right, #cb356b, #bd3f32);
         background: linear-gradient(to right, #cb356b, #bd3f32)
     }
+    h1,
+      .navbar-brand,
+      .navbar-nav a {
+        font-family: 'Gill Sans', sans-serif;
+      }
 </style>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
-        <a class="navbar-brand" href="#"> Just Blog it</a>
+    <nav class="navbar navbar-expand-lg navbar-dark p-5 gradient-custom pb-2 pt-3">
+        <a class="navbar-brand text-white mx-4" href="#"> Just Blog it</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link text-white mx-3" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'blog' %}">Blog</a>
+              <a class="nav-link text-white mx-3" href="{% url 'myBlog' %}">My Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'content' %}">Your Content</a>
-              </li>
+              <a class="nav-link text-white mx-3" href="{% url 'content' %}">Add Content</a>
+            </li> 
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'author' %}">Author</a>
+              <a class="nav-link text-white mx-3" href="{% url 'author' %}">Author</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link text-white mx-3" href="{% url 'changePass' %}">Change Password</a>
             </li>
           </ul>
         </div>
