--- a/handleBlog/templates/home.html
+++ b/handleBlog/templates/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,78 +11,154 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet" />
-    <title>Task Manager</title>
+    <title>Blogs</title>
 </head>
 <style>
     .gradient-custom {
-      background: #6a11cb;
-      background: -webkit-linear-gradient(to right, #cb356b, #bd3f32);
-      background: linear-gradient(to right, #cb356b, #bd3f32)
+        background: #6a11cb;
+        background: -webkit-linear-gradient(to right, #cb356b, #bd3f32);
+        background: linear-gradient(to right, #cb356b, #bd3f32)
     }
+
+    body {
+        background: #6a11cb;
+        background: -webkit-linear-gradient(to right, #cb356b, #bd3f32);
+        background: linear-gradient(to right, #cb356b, #bd3f32)
+      }
+      .title {
+       
+          margin-bottom: 50px;
+          text-transform: uppercase;
+      }
+      
+      .card-block {
+          font-size: 1em;
+          position: relative;
+          margin: 0;
+          padding: 1em;
+          border: none;
+          border-top: 1px solid rgba(34, 36, 38, .1);
+          box-shadow: none;
+          
+           
+      }
+      .card {
+          font-size: 1em;
+          overflow: hidden;
+          padding: 5;
+          border: none;
+          border-radius: .7rem;
+          box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+          margin-top:20px;
+      }
+      
+
+      .btn {
+        margin-top: auto;
+      }
+
+      h1,
+      .navbar-brand,
+      .navbar-nav a {
+        font-family: 'Gill Sans', sans-serif;
+      }
+
+     
+      
 </style>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#" > Just Blog it</a>
+
+    <nav class="navbar navbar-expand-lg navbar-dark p-5 gradient-custom pb-2 pt-3">
+        <a class="navbar-brand text-white mx-4" href="#">Just Blog it  </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link text-white mx-3" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'blog' %}">Blog</a>
+              <a class="nav-link text-white mx-3" href="{% url 'myBlog' %}">My Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'content' %}">Your Content</a>
-            </li>
+              <a class="nav-link text-white mx-3" href="{% url 'content' %}">Add Content</a>
+            </li> 
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'author' %}">Author</a>
+              <a class="nav-link text-white mx-3" href="{% url 'author' %}">Author</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link text-white mx-3" href="{% url 'changePass' %}">Change Password</a>
             </li>
           </ul>
-          <!-- <span class="navbar-text">
-            you can pour your thoughts here
-          </span> -->
         </div>
       </nav>
 
-    <section class="vh-100 gradient-custom">
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-              <div class="card bg-dark text-white" style="border-radius: 1rem;">
-                <div class="card-body p-5 text-center">
-                    <form action="{% url 'changePass' %}" class='row d-flex justify-content-center align-items-center' method="post">
-                        <h6 style="color:red">{{message}}</h6>
-                        {% csrf_token %}
-                        <div>
-                            <p class="text-white-50 mb-5">Change Your Password here..!</p>
-                        </div>
-                        <div class="form-floating form-white mb-4">
-                            <input name='oldPass' type="password" class="form-control form-control-lg" />
-                            <label class="form-label" for="form3Example3c">Enter Old Password</label>
-                        </div>
-                        <div class="form-floating form-white mb-4">
-                            <input name='newPass' type="password" class="form-control form-control-lg" />
-                            <label class="form-label" for="form3Example3c">Enter New Password</label>
-                        </div>
-                        <div class="form-floating form-white mb-4">
-                            <input name='confirmPass' type="password" class="form-control form-control-lg" />
-                            <label class="form-label" for="form3Example3c">Confirm New Password</label>
-                        </div>
-                        <div>
-                            <button class="btn btn-primary btn-lg gradient-custom" type="submit">
-                                Change Password
-                            </button>
-                        </div>
-                    </form>
-                </div>
+    
+      {% for field in blogs %}
+      <div class="container py-3">
+        <div class="card">
+          <div class="row ">
+      
+            <div class="col-md-7 px-3">
+              <div class="card-block px-6">
+                <p class="card-text">{{ field.blogDate }}</p>
+                <i class="fa fa-quote-left text-black"></i>
+                
+                <h4 class="card-title">{{field.blogTitle}}</h4>
+                <p class="card-text">
+                    {{field.blogContent}}
+                </p>
               </div>
             </div>
+       
+            <div class="col-md-5">
+
+                <div>
+                    <img src="{{ field.blogImage }}" alt="image" class="img-fluid" style="width:100%; height:100%; border-radius: 7px;">
+                </div>
+
+            </div>
+
+            </div>
+            
+            <div class="col-md-7 px-3">
+              <div class="card-block px-6">
+              <form action="{% url 'addComment' pk=field.blog_id %}" method="post">
+                {% csrf_token%}
+                <h4 class="card-title">Comments</h4>
+                  <div class="form-floating w-100">
+                    <textarea class="form-control" name='commentContent' id="textAreaExample" rows="4" style="background: #fff;"></textarea>
+                    <label class="form-label" for="textAreaExample">Message</label>
+                  </div>
+
+                  <div class="float-end mt-2 mb-2 pt-1">
+                    <button type="submit" class="btn btn-primary btn-sm gradient-custom">Post comment</button>
+                  </div>
+              </form>
+              </div>
+            </div>
+
+            {% for field in comments %}
+            <div class="card-block px-6 ">
+
+              <div class="d-flex justify-content-between align-items-center font-bold">
+                <p class="mb-1">
+                  {{field.commentersName}} <span class="small">{{field.commentDate}}</span>
+                </p>
+              </div>
+
+              <p class="small mb-0">
+                {{field.commentContent}}
+              </p>
+
+            </div>
+            {% endfor %}
+
           </div>
         </div>
-      </section>
+        {% endfor %}
 
 </body>
 </html>
+
