added admin side, featuers like logout and deactivate user.

--- a/handleBlog/templates/content.html
+++ b/handleBlog/templates/content.html
@@ -88,12 +88,13 @@
             <li class="nav-item">
               <a class="nav-link text-white mx-3" href="{% url 'content' %}">Add Content</a>
             </li> 
-            <li class="nav-item">
-              <a class="nav-link text-white mx-3" href="{% url 'author' %}">Author</a>
-            </li> 
+            
             <li class="nav-item">
               <a class="nav-link text-white mx-3" href="{% url 'changePass' %}">Change Password</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-white mx-3" href="{% url 'logout' %}">Log out</a>
+              </li>
           </ul>
         </div>
       </nav>
