--- a/handleBlog/templates/login.html
+++ b/handleBlog/templates/login.html
@@ -27,10 +27,10 @@
         background: #6a11cb;
         
         /* Chrome 10-25, Safari 5.1-6 */
-        background: -webkit-linear-gradient(to right, #dce35b, #45b649);
+        background: -webkit-linear-gradient(to right, #ff512f, #f09819);
         
         /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        background: linear-gradient(to right, #dce35b, #45b649)
+        background: linear-gradient(to right, #ff512f, #f09819)
         }
 </style>
 
