--- a/handleBlog/templates/changePass.html
+++ b/handleBlog/templates/changePass.html
@@ -40,11 +40,12 @@
         <li class="nav-item">
           <a class="nav-link text-white mx-3" href="{% url 'content' %}">Add Content</a>
         </li> 
-        <li class="nav-item">
-          <a class="nav-link text-white mx-3" href="{% url 'author' %}">Author</a>
-        </li> 
+
         <li class="nav-item">
           <a class="nav-link text-white mx-3" href="{% url 'changePass' %}">Change Password</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white mx-3" href="{% url 'logout' %}">Log out</a>
         </li>
       </ul>
     </div>
@@ -60,19 +61,19 @@
                         <h6 style="color:red">{{message}}</h6>
                         {% csrf_token %}
                         <div>
-                            <p class="text-white-50 mb-5">Change Your Password here..!</p>
+                            <p class="text-white mb-5 gradient-custom" style="border-radius: 0.5rem;">Change Your Password here..!</p>
                         </div>
-                        <div class="form-floating form-white mb-4">
+                        <div class="form-white mb-4"> 
+                            <label class="form-control-label px-3 gradient-custom" style="border-radius: 0.5rem;">Enter Old Password:</label>
                             <input name='oldPass' type="password" class="form-control form-control-lg" required/>
-                            <label class="form-label" for="form3Example3c">Enter Old Password</label>
                         </div>
-                        <div class="form-floating form-white mb-4">
+                        <div class="form-white mb-4">
+                            <label class="form-control-label px-3 gradient-custom" style="border-radius: 0.5rem;">Enter New Password:</label>
                             <input name='newPass' type="password" class="form-control form-control-lg" required/>
-                            <label class="form-label" for="form3Example3c">Enter New Password</label>
                         </div>
-                        <div class="form-floating form-white mb-4">
+                        <div class="form-white mb-4">
+                            <label class="form-control-label px-3 gradient-custom" style="border-radius: 0.5rem;">Confirm New Password:</label>
                             <input name='confirmPass' type="password" class="form-control form-control-lg" required/>
-                            <label class="form-label" for="form3Example3c">Confirm New Password</label>
                         </div>
                         <div>
                             <button class="btn btn-primary btn-lg gradient-custom" type="submit">
