--- a/handleBlog/templates/myBlog.html
+++ b/handleBlog/templates/myBlog.html
@@ -85,10 +85,10 @@
               <a class="nav-link text-white mx-3" href="{% url 'content' %}">Add Content</a>
             </li> 
             <li class="nav-item">
-              <a class="nav-link text-white mx-3" href="{% url 'author' %}">Author</a>
-            </li> 
-            <li class="nav-item">
               <a class="nav-link text-white mx-3" href="{% url 'changePass' %}">Change Password</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white mx-3" href="{% url 'logout' %}">Log out</a>
             </li>
           </ul>
         </div>
