--- a/handleBlog/templates/forgetPass.html
+++ b/handleBlog/templates/forgetPass.html
@@ -18,10 +18,16 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css"
     rel="stylesheet"
     />
-    <title>Reset Password</title>
+    <title>Forget Password</title>
 </head>
 <style>
     .gradient-custom {
+        background: #6a11cb;
+        background: -webkit-linear-gradient(to right, #ff0084, #ff0055);
+        background: linear-gradient(to right, #ff0084, #ff0055)
+    }
+
+    body{
         background: #6a11cb;
         background: -webkit-linear-gradient(to right, #ff0084, #ff0055);
         background: linear-gradient(to right, #ff0084, #ff0055)
@@ -37,17 +43,18 @@
                 <form class='row d-flex justify-content-center align-items-center' method="post">
                     {% csrf_token %}            
                     <div class="card text-center" style="width: 300px;">
-                        <div class="card-header h5 text-white gradient-custom">Password Reset</div>
+                        <div class="card-header h6 ">{{message}}</div>
+                        <div class="card-header h5 ">Password Reset</div>
                         <div class="card-body px-5">
                             <p class="card-text py-2">
                                 Enter your email address and we'll send you an email with instructions to reset your password.
                             </p>
                             <div class="form-floating">
-                                <!-- <input type="email" id="typeEmail" class="form-control my-3" />
-                                <label class="form-label" for="typeEmail">Email input</label> -->
-                                {{ form.as_p }}
+                                <input type="email" id="typeEmail" class="form-control my-3" name="userEmail"/>
+                                <label class="form-label" for="typeEmail">Email input</label>
+                               
                             </div>
-                            <button type="submit" class="btn btn-primary w-100 gradient-custom" >Reset password</button>
+                            <button type="submit" class="btn btn-primary w-100 gradient-custom">Reset password</button>
                             <div class="d-flex justify-content-between mt-4">
                                 <a href="{% url 'login' %}">Login</a>
                                 <a href="register">Register</a>
@@ -59,5 +66,11 @@
           </div>
         </div>
       </div>
+      <script>
+        document.getElementById('resetPasswordBtn').addEventListener('click', function() {
+            var token = "{{ token }}";  // Assuming 'token' is available in your template context
+            window.location.href = `/resetPass/${token}/`;
+        });
+    </script>
 </body>
 </html>
