--- a/handleBlog/templates/login.html
+++ b/handleBlog/templates/login.html
@@ -59,7 +59,7 @@
                               <label class="form-label" for="typePasswordX">Password</label>
                             </div>
                             
-                            <p class="small mb-4 pb-lg-2"><a class="text-white-50" href="{% url 'resetPassword' %}">Forgot password?</a></p>
+                            <p class="small mb-4 pb-lg-2"><a class="text-white-50" href="{% url 'forgetPass' %}">Forget password?</a></p>
                             
                             <button class="btn btn-primary btn-lg gradient-custom" type="submit">Login</button>
               
