--- a/handleBlog/templates/home.html
+++ b/handleBlog/templates/home.html
@@ -11,6 +11,8 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet" />
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Blogs</title>
 </head>
 <style>
@@ -63,6 +65,10 @@
         font-family: 'Gill Sans', sans-serif;
       }
 
+      .rating-header {
+        margin-top: -10px;
+        margin-bottom: 10px;
+    }
      
       
 </style>
@@ -153,45 +159,62 @@
             </div>
             {% endif %}
             {% endfor %}
-            <div class="container-wrapper">  
-              <div class="container d-flex align-items-center justify-content-center">
-                <div class="row justify-content-center">    
+            <div class="container-wrapper card-block px-6 ">  
+              <div class="container d-flex font-bold">
+                <div class="row justify-content-left">    
                   
-                  <!-- star rating -->
-                  <div class="rating-wrapper">
-                    
-                    <!-- star 5 -->
-                    <input type="radio" id="5-star-rating" name="star-rating" value="5">
-                    <label for="5-star-rating" class="star-rating">
-                      <i class="fas fa-star d-inline-block"></i>
+                  <div class="form-group" id="rating-ability-wrapper">
+                    <label class="control-label" for="rating">
+                    <span class="field-label-header">How would you rate this blog?</span><br>
+                    <span class="field-label-info"></span>
+                    <input type="hidden" id="selected_rating" name="selected_rating" value="" required="required">
                     </label>
+                    <h2 class="bold rating-header">
+                    <span class="selected-rating">0</span><small> / 5</small>
+                    </h2>
+                    <button type="button" class="btnrating btn btn-default btn-lg" data-attr="1" id="rating-star-1">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </button>
+                    <button type="button" class="btnrating btn btn-default btn-lg" data-attr="2" id="rating-star-2">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </button>
+                    <button type="button" class="btnrating btn btn-default btn-lg" data-attr="3" id="rating-star-3">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </button>
+                    <button type="button" class="btnrating btn btn-default btn-lg" data-attr="4" id="rating-star-4">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </button>
+                    <button type="button" class="btnrating btn btn-default btn-lg" data-attr="5" id="rating-star-5">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </button>
+                </div>
+                  <script>	jQuery(document).ready(function($){
+	    
+                    $(".btnrating").on('click',(function(e) {
                     
-                     <!-- star 4 -->
-                    <input type="radio" id="4-star-rating" name="star-rating" value="4">
-                    <label for="4-star-rating" class="star-rating star">
-                      <i class="fas fa-star d-inline-block"></i>
-                    </label>
+                    var previous_value = $("#selected_rating").val();
                     
-                     <!-- star 3 -->
-                    <input type="radio" id="3-star-rating" name="star-rating" value="3">
-                    <label for="3-star-rating" class="star-rating star">
-                      <i class="fas fa-star d-inline-block"></i>
-                    </label>
+                    var selected_value = $(this).attr("data-attr");
+                    $("#selected_rating").val(selected_value);
                     
-                    <!-- star 2 -->
-                    <input type="radio" id="2-star-rating" name="star-rating" value="2">
-                    <label for="2-star-rating" class="star-rating star">
-                      <i class="fas fa-star d-inline-block"></i>
-                    </label>
+                    $(".selected-rating").empty();
+                    $(".selected-rating").html(selected_value);
                     
-                    <!-- star 1 -->
-                    <input type="radio" id="1-star-rating" name="star-rating" value="1">
-                    <label for="1-star-rating" class="star-rating star">
-                      <i class="fas fa-star d-inline-block"></i>
-                    </label>
+                    for (i = 1; i <= selected_value; ++i) {
+                    $("#rating-star-"+i).toggleClass('btn-warning');
+                    $("#rating-star-"+i).toggleClass('btn-default');
+                    }
                     
-                   </div>
-                  
+                    for (ix = 1; ix <= previous_value; ++ix) {
+                    $("#rating-star-"+ix).toggleClass('btn-warning');
+                    $("#rating-star-"+ix).toggleClass('btn-default');
+                    }
+                    
+                    }));
+                    
+                      
+                  });
+                  </script>
                 </div>
               </div>
             </div>
