--- a/handleBlog/templates/content.html
+++ b/handleBlog/templates/content.html
@@ -113,14 +113,14 @@
                             <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Last name<span class="text-danger"> *</span></label> <input type="text" id="lname" name="lname" placeholder="Enter your last name" onblur="validate(2)"> </div>
                         </div> -->
                         <div class="row justify-content-between text-left">
-                            <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Blog title<span class="text-danger"> *</span></label> <input type="text" id="email" name="blogTitle" onblur="validate(3)"> </div>
+                            <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Blog title<span class="text-danger"> *</span></label> <input type="text" id="email" name="blogTitle" onblur="validate(3)" required> </div>
                             <!-- <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Phone number<span class="text-danger"> *</span></label> <input type="text" id="mob" name="mob" placeholder="" onblur="validate(4)"> </div> -->
                         </div>
                         <div class="row justify-content-between text-left">
-                            <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Blog content<span class="text-danger"> *</span></label> <textarea id="job" name="blogContent" onblur="validate(5)"> </textarea></div>
+                            <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Blog content<span class="text-danger"> *</span></label> <textarea id="job" name="blogContent" onblur="validate(5)" required> </textarea></div>
                         </div>
                         <div class="row justify-content-between text-left">
-                            <div class="form-group col-12 flex-column d-flex"> <label class="form-control-label px-3">Blog Image<span class="text-danger"> *</span></label> <input type="file" id="ans" name="blogImage" placeholder="" onblur="validate(6)"> </div>
+                            <div class="form-group col-12 flex-column d-flex"> <label class="form-control-label px-3">Blog Image<span class="text-danger"> *</span></label> <input type="file" id="ans" name="blogImage" placeholder="" onblur="validate(6)" required> </div>
                         </div>
                         <div class="row justify-content-end">
                             <div class="form-group col-sm-6"> 
