--- a/handleBlog/templates/register.html
+++ b/handleBlog/templates/register.html
@@ -50,7 +50,7 @@
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                           <div class="form-floating flex-fill mb-0">
-                            <input name='userName' type="text" id="form3Example1c" class="form-control" />
+                            <input name='userName' type="text" id="form3Example1c" class="form-control" required/>
                             <label class="form-label" for="form3Example1c">User Name</label>
                           </div>
                         </div>
@@ -58,7 +58,7 @@
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                           <div class="form-floating flex-fill mb-0">
-                            <input name='userEmail' type="email" id="form3Example3c" class="form-control" />
+                            <input name='userEmail' type="email" id="form3Example3c" class="form-control" required/>
                             <label class="form-label" for="form3Example3c">Email</label>
                           </div>
                         </div>
@@ -66,7 +66,7 @@
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                           <div class="form-floating flex-fill mb-0">
-                            <input name='userPassword' type="password" id="form3Example4c" class="form-control" />
+                            <input name='userPassword' type="password" id="form3Example4c" class="form-control" required/>
                             <label class="form-label" for="form3Example4c">Password</label>
                           </div>
                         </div>
@@ -74,7 +74,7 @@
                         <div class="d-flex flex-row align-items-center mb-4">
                             <i class="fa-solid fa-phone fa-lg me-3 fa-fw"></i>
                             <div class="form-floating flex-fill mb-0">
-                              <input name='userPhone' id="phone" type="tel" class="form-control" />
+                              <input name='userPhone' id="phone" type="tel" class="form-control" title="Enter 10 digit number alphabets aer not allowed" pattern="[1-9]{1}[0-9]{9}" required/>
                               <label class="form-label" for="form3Example3c">Phone Number</label>
                             </div>
                           </div>
@@ -82,7 +82,7 @@
                           <div class="d-flex flex-row align-items-center mb-4">
                             <i class="fa-solid fa-address-card fa-lg me-3 fa-fw"></i>
                             <div class="form-floating flex-fill mb-0">
-                              <input name='userAbout' type="text" id="form3Example3c" class="form-control" />
+                              <input name='userAbout' type="text" id="form3Example3c" class="form-control" required/>
                               <label class="form-label" for="form3Example3c">About You</label>
                             </div>  
                           </div>
