--- a/handleBlog/templates/myBlog.html
+++ b/handleBlog/templates/myBlog.html
@@ -102,6 +102,7 @@
       
             <div class="col-md-7 px-3">
                 <div class="card-block px-6">
+                  <h4 class="card-title">{{field.user_id.userName}}</h4>
                     <p class="card-text">{{ field.blogDate }}</p>
                     <i class="fa fa-quote-left text-black"></i>
                     
